# quicklang

./: AGENTS.md  Cargo.toml  README.md  build.rs  ll.v  main.lox  main.qx  test.py  test.qx  test.skibidi
extension/: CHANGELOG.md  extension.js  language-configuration.json  package-lock.json  package.json
extension/syntaxes/: quick.tmLanguage.json
src/: main.qx  main.rs
test/: 404.html  index.html  main.js  test.json  user.html
