[package]
name = "quickscript"
version = "0.1.0"
authors = ["Trig Northrup <northruptrig@gmail.com>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
actix = "0.13.5"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
libc = "0.2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "macros",
    "fs",
] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
