[package]
name = "quickscript"
version = "0.1.0"
authors = ["Trig Northrup <northruptrig@gmail.com>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
actix = "0.13.5"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "macros",
    "fs",
] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5.48", features = ["derive"] }
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
